# malda-sequencer

./: .gitignore  API_USAGE.md  CONFIGURATION_GUIDE.md  Cargo.toml  LICENSE-BSL.md  Mainnet Config Master File - Offchain Components and Params.csv  README.md  ca-certificate.crt  foundry.toml  licensing.md  nohup.out  notice.md
contracts/: L2Portal.sol  README.md  UserLiquidity.sol
crates/signer/: Cargo.toml
crates/signer/examples/: aws_assume_role_loop.rs  aws_simple.rs
crates/signer/src/: backend.rs  config.rs  error.rs  lib.rs  service.rs
crates/signer/src/aws/: mod.rs
crates/signer/src/local/: mod.rs
host/: Cargo.toml
host/host_utils/: Cargo.toml
host/host_utils/src/: constants.rs  lib.rs  viewcalls.rs
host/src/: lib.rs
malda_rs/: Cargo.toml  README.md
malda_rs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
malda_rs/doc/malda_rs/: all.html  index.html  sidebar-items.js
malda_rs/doc/malda_rs/constants/: constant.BASE_CHAIN_ID.html  constant.BASE_SEQUENCER.html  constant.ETHEREUM_CHAIN_ID.html  constant.L1_BLOCK_ADDRESS_OPTIMISM.html  constant.LINEA_CHAIN_ID.html  constant.LINEA_SEQUENCER.html  constant.OPTIMISM_CHAIN_ID.html  constant.OPTIMISM_SEQUENCER.html  constant.REORG_PROTECTION_DEPTH.html  constant.RPC_URL_ARBITRUM.html  constant.RPC_URL_BASE.html  constant.RPC_URL_ETHEREUM.html  constant.RPC_URL_LINEA.html  constant.RPC_URL_OPTIMISM.html  constant.RPC_URL_SCROLL.html  constant.SCROLL_CHAIN_ID.html  constant.SECP256K1N_HALF.html  constant.SEQUENCER_REQUEST_BASE.html  constant.SEQUENCER_REQUEST_OPTIMISM.html  constant.WETH_ARBITRUM.html  constant.WETH_BASE.html  constant.WETH_ETHEREUM.html  constant.WETH_LINEA.html  constant.WETH_OPTIMISM.html  constant.WETH_SCROLL.html  index.html  sidebar-items.js
malda_rs/doc/malda_rs/constants/constants/: constant.BASE_CHAIN_ID.html  constant.BASE_SEQUENCER.html  constant.ETHEREUM_CHAIN_ID.html  constant.L1_BLOCK_ADDRESS_OPTIMISM.html  constant.LINEA_CHAIN_ID.html  constant.LINEA_SEQUENCER.html  constant.OPTIMISM_CHAIN_ID.html  constant.OPTIMISM_SEQUENCER.html  constant.REORG_PROTECTION_DEPTH.html  constant.SCROLL_CHAIN_ID.html  constant.SECP256K1N_HALF.html
malda_rs/doc/malda_rs/cryptography/: fn.recover_signer.html  fn.signature_from_bytes.html  fn.signature_msg.html  index.html  sidebar-items.js
malda_rs/doc/malda_rs/types/: index.html  sidebar-items.js  struct.ExecutionPayload.html  struct.Journal.html  struct.SequencerCommitment.html  struct.Withdrawal.html  type.ExtraData.html  type.LogsBloom.html  type.Transaction.html
malda_rs/doc/malda_rs/types/IERC20/: enum.IERC20Calls.html  index.html  sidebar-items.js  struct.balanceOfCall.html  struct.balanceOfReturn.html
malda_rs/doc/malda_rs/types/IL1Block/: enum.IL1BlockCalls.html  index.html  sidebar-items.js  struct.hashCall.html  struct.hashReturn.html  struct.numberCall.html  struct.numberReturn.html
malda_rs/doc/malda_rs/validators/: fn.validate_balance_of_call.html  fn.validate_chain_length.html  fn.validate_ethereum_env_via_opstack.html  fn.validate_linea_env.html  fn.validate_opstack_env.html  index.html  sidebar-items.js
malda_rs/doc/malda_rs/viewcalls/: fn.get_balance_call_input.html  fn.get_current_sequencer_commitment.html  fn.get_l1block_call_input.html  fn.get_linking_blocks_ethereum.html  fn.get_user_balance.html  fn.get_user_balance_exec.html  fn.get_user_balance_prove.html  fn.get_user_balance_zkvm_env.html  index.html  sidebar-items.js
malda_rs/doc/search.desc/malda_rs/: malda_rs-desc-0-.js
malda_rs/doc/src/malda_rs/: constants.rs.html  lib.rs.html  viewcalls.rs.html
malda_rs/doc/src/malda_rs/methods/guest/guest_utils/src/: constants.rs.html  cryptography.rs.html  types.rs.html  validators.rs.html
malda_rs/doc/trait.impl/alloy_rlp/encode/: trait.Encodable.js
malda_rs/doc/trait.impl/alloy_sol_types/private/: trait.SolTypeValue.js
malda_rs/doc/trait.impl/alloy_sol_types/types/event/topic/: trait.EventTopic.js
malda_rs/doc/trait.impl/alloy_sol_types/types/function/: trait.SolCall.js
malda_rs/doc/trait.impl/alloy_sol_types/types/interface/: trait.SolInterface.js
malda_rs/doc/trait.impl/alloy_sol_types/types/struct/: trait.SolStruct.js
malda_rs/doc/trait.impl/alloy_sol_types/types/ty/: trait.SolType.js
malda_rs/doc/trait.impl/alloy_sol_types/types/value/: trait.SolValue.js
malda_rs/doc/trait.impl/core/clone/: trait.Clone.js
malda_rs/doc/trait.impl/core/convert/: trait.TryFrom.js
malda_rs/doc/trait.impl/core/fmt/: trait.Debug.js
malda_rs/doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
malda_rs/doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
malda_rs/doc/trait.impl/serde/de/: trait.Deserialize.js
malda_rs/doc/trait.impl/serde/ser/: trait.Serialize.js
malda_rs/doc/trait.impl/ssz/decode/: trait.Decode.js
malda_rs/doc/trait.impl/ssz/encode/: trait.Encode.js
malda_rs/doc/type.impl/ssz_types/fixed_vector/: struct.FixedVector.js
malda_rs/doc/type.impl/ssz_types/variable_list/: struct.VariableList.js
malda_rs/src/: constants.rs  elfs_ids.rs  lib.rs  viewcalls.rs  viewcalls_ethereum_light_client.rs
malda_rs/tests/: tests.rs
malda_utils/: Cargo.toml
methods/: Cargo.toml  batch_logs.txt  build.rs  log.txt  parallel_benchmark.txt  profile_base.pb  profile_ethereum_via_light_client.pb  profile_ethereum_via_op.pb  profile_optimism.pb
methods/guest/: Cargo.toml  README.md
methods/guest/guest_utils/: Cargo.toml
methods/guest/guest_utils/src/: constants.rs  cryptography.rs  l1_validation.rs  lib.rs  types.rs  validators.rs  validators_ethereum_light_client.rs
methods/patch/ethereum-hashing/: Cargo.toml
methods/patch/ethereum-hashing/src/: lib.rs  sha2_impl.rs
methods/src/: lib.rs
migrations/: 001_initial_schema.sql  002_add_liquidatee_collateral.sql
script/: Deploy.s.sol
scripts/: clean_db.sh  deploy.sh  rotate_sequencer_log.sh  start_sequencer.sh  test_config.sh
sequencer/: Cargo.toml  nohup.out
src/: api_module.rs  batch_event_listener.rs  config.rs  constants.rs  database.rs  (+15 more)
(+36 files in other folders)
