[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"

eyre = "0.6"

serde_json = "1.0"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate", "chrono", "tls-native-tls"] }

alloy = {version = "1.0", features = [
    "providers",
    # "full",
    "rpc-types",
    # "provider-debug-api",
    "sol-types",
    "provider-ws",
    "signers",
    # "node-bindings",
    "signer-local",
    "contract"
] }
alloy-sol-types = "1.0"
malda_rs = { git = "https://github.com/malda-protocol/malda-zk-coprocessor.git", rev = "f6ecbd16e9b94687cdc851485db882bb876324e9" }
serde = { version = "1.0", features = ["derive"] }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v3.0.1" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
rustls = { version = "0.23", features = ["ring"] }
axum = "0.7"


[package.metadata.sqlx]
migrations = "migrations"
