[package]
name = "host"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-steel = { workspace = true, features = ["host"] }
risc0-zkvm = { version = "1.2", features = ["client"] }
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = { workspace = true }
url = { version = "2.5" }

# boundless
boundless-market = "0.4"
alloy = "0.6.4"
dotenvy = "0.15"
tracing = "0.1"
rand = "0.8"
malda_rs = { path = "../malda_rs" }

