[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"


[dependencies]

tokio = { version = "1.35", features = ["full"] }
url = { version = "2.5" }

eyre = "0.6"


alloy = {version = "0.6.4", features = [
    "providers",
    # "full",
    "rpc-types",
    # "provider-debug-api",
    # "sol-types",
    "provider-ws",
    "signers",
    "node-bindings",
    "signer-local",

] }
futures = "0.3"
futures-util = "0.3"
malda_rs = { path = "../malda_rs" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.0" }
tracing = "0.1"
hex = "0.4"