[package]
name = "malda_rs"
version = "0.1.0"
edition = "2021"


[dependencies]
secp256k1 = { version = "0.29.1", features = [
    "recovery",
    "std",
    "global-context",
] }
k256 = "0.13.4"
alloy-primitives = { version = "=0.8.5", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "=0.8.5" }
log = { version = "0.4" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }

eyre = "0.6.8"
serde = { version = "1.0.143", features = ["derive"] }
snap = "1"
ssz_types = "0.8.0"
ethereum_ssz_derive = "0.7.0"
ethereum_ssz = "0.7.0"
alloy-rlp = "0.3"
alloy-consensus = "0.4.2"