[package]
name = "malda_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = "0.6.4"
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-steel = { workspace = true, features = ["host"] }
risc0-zkvm = { version = "1.2", features = ["client", "unstable"] }
tracing-subscriber = { workspace = true }
url = { version = "2.5" }
alloy-consensus = "0.6.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
k256 = "0.13.4"
eyre = "0.6.8"
snap = "1"
ssz_types = "0.8.0"
ethereum_ssz_derive = "0.7.0"
ethereum_ssz = "0.7.0"
alloy-rlp = "0.3"
tokio = "1.35"

alloy-primitives-old = { package = "alloy-primitives", version = "=0.7.7" }
consensus-core = { git = "https://github.com/a16z/helios" , tag = "0.6.0" }
consensus = { git = "https://github.com/a16z/helios" , tag = "0.6.0" }
tree_hash = "0.7.0"
bytemuck = { version = "1.16" }

boundless-market = "0.4"
dotenvy = "0.15"
tracing = "0.1"