[package]
name = "methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[dev-dependencies]
alloy = "0.4.2"
alloy-primitives = { workspace = true }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
malda_rs = { path = "../malda_rs" }
tokio = { version = "1.35", features = ["full", "test-util"] }

