[package]
name = "methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[dev-dependencies]
alloy = "0.6.4"
alloy-primitives = { workspace = true }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.0" }
malda_rs = { path = "../malda_rs" }
tokio = { version = "1.35", features = ["full", "test-util"] }
rand = "0.8"


risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.0" }