[package]
name = "malda-signer"
version = "0.2.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = ["local"]
local = ["dep:alloy-signer-local"]
aws = [
    "dep:alloy-signer-aws",
    "dep:aws-config",
    "dep:aws-sdk-kms",
    "dep:aws-types",
]
full = ["local", "aws"]

[dependencies]

# Core dependencies (always required).
alloy-primitives = { version = "1.5.2", default-features = false }
alloy-signer = { version = "1.3.0", default-features = false }
alloy-network = { version = "1.3.0", default-features = false }
alloy-consensus = { version = "1.3.0", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = ["sync", "rt"] }
thiserror = { version = "2.0", default-features = false }
async-trait = { version = "0.1.89", default-features = false }

# Local signing backend (optional).
alloy-signer-local = { version = "1.3.0", optional = true, default-features = false }

# AWS signing backend (optional).
alloy-signer-aws = { version = "1.3.0", optional = true, default-features = false }
aws-config = { version = "1.8.12", optional = true, default-features = false, features = ["behavior-version-latest", "credentials-process", "default-https-client", "rt-tokio"] }
aws-sdk-kms = { version = "1.97.0", optional = true, default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-types = { version = "1.3.11", optional = true, default-features = false }

[dev-dependencies]

# Asynchronous runtime.
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }

# Handling .env files.
dotenvy = { version = "0.15.7", default-features = false }

# Randomness.
rand = { version = "0.9.0", default-features = false, features = ["std", "thread_rng"] }

# For testing EthereumWallet integration.
alloy = { version = "1.0", default-features = false, features = ["network"] }
