[package]
name = "host_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-steel = { workspace = true, features = ["host"] }
risc0-zkvm = { version = "1.1.2", features = ["client"] }
tracing-subscriber = { workspace = true }
url = { version = "2.5" }
alloy-consensus = "0.4.2"
guest_utils = { path = "../../methods/guest/guest_utils" }
reqwest = { version = "0.12.4", features = ["json"] }