[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "balance-of"
path = "src/bin/balance_of.rs"

[workspace]
members = ["guest_utils"]

[dependencies]
alloy-primitives = { version = "=0.8.5", default-features = false}
alloy-sol-types = { version = "=0.8.5" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }

guest_utils = { path = "../guest/guest_utils" }
alloy-consensus = "0.4.2"

[patch.crates-io]
ethereum_hashing = { path = "../../patch/ethereum_hashing" }

[profile.release]
lto = "thin"
