[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "get-proof-data"
path = "src/bin/get_proof_data.rs"

[workspace]
members = ["guest_utils"]

[dependencies]
alloy-primitives = { version = "0.8.8", default-features = false}
alloy-sol-types = { version = "0.8.8" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.0" }
risc0-zkvm = { version = "1.2.1", default-features = false, features = ['std', 'unstable'] }

guest_utils = { path = "../guest/guest_utils" }
alloy-consensus = "0.6.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[patch.crates-io]
ethereum_hashing = { path = "../../patch/ethereum_hashing" }
# [patch.crates-io]
# # Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# # multiplication accelerator support for all downstream usages of the following crates.
# sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
# k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1"  }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }

[profile.release]
lto = "thin"
