[package]
name = "guest_utils"
version = "0.1.0"
edition = "2021"


[dependencies]
alloy-primitives = { version = "=0.8.5", default-features = false }
alloy-sol-types = { version = "=0.8.5" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.4" }
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
serde = { version = "1.0.143", features = ["derive"] }
url = { version = "2.5" }
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default-features = false }
eyre = "0.6.8"
snap = "1"
ssz_types = "0.8.0"
ethereum_ssz_derive = "0.7.0"
ethereum_ssz = "0.7.0"
alloy-rlp = "0.3"
alloy-consensus = "0.4.2"



